# OTP-based-login-system

otp-auth-system/: pyproject.toml
otp-auth-system/app/: main.py
otp-auth-system/app/db/v1/: __init__.py  async_db.py  redis_db.py  sync.py
otp-auth-system/app/managers/v1/: auth_manager.py
otp-auth-system/app/middleware/: auth_middleware.py
otp-auth-system/app/middleware/v1/: auth_middleware.py
otp-auth-system/app/models/: db_models.py  schemas.py
otp-auth-system/app/models/v1/: db_models.py  schemas.py
otp-auth-system/app/routers/v1/: auth.py
otp-auth-system/app/services/: otp_services.py  twilio_service.py
otp-auth-system/app/services/v1/: otp_services.py  twilio_service.py
otp-auth-system/app/utils/: __init__.py
otp-auth-system/app/utils/v1/: __init__.py  loggers.py  security.py  validators.py
